# EasyEvals

./: README.md
backend/: benchmark_data.json  benchmark_results.json  main.py  requirements.txt  sample_dataset.csv  sample_dataset.json
experiments/: all_run_data.json  compare-grok.ipynb  compare.ipynb  hello.ipynb  pyproject.toml  run_data.json  run_data_samples.json  tests.py
experiments/log-output/: 2024-11-23T00-27-58-08-00_theory-of-mind_fZviDx4z7a8UaPgMmCNmpD.json
experiments/logs-json/: 2024-11-23T10-44-13-08-00_theory-of-mind_Ehd35cmCvqzUJmLrKpJTXi.json  2024-11-23T11-01-41-08-00_theory-of-mind_GCZsTqfGL8YygNvSP9vZSD.json  2024-11-23T11-06-49-08-00_theory-of-mind_nvWSmTSeMzSAMLETJEhgcq.json  2024-11-23T11-12-29-08-00_theory-of-mind_fBnWBgug2x4YvmxSWWep5r.json  2024-11-23T11-56-22-08-00_theory-of-mind_fvU78cc6cbGPkicGjdVprr.json
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: api-bridge.tsx  layout.tsx  page.tsx
frontend/app/api/: index.ts
frontend/components/: form-message.tsx  header-auth.tsx  submit-button.tsx
frontend/components/model-cards/: add-card-dialog.tsx  compare-table.tsx  hero-section.tsx  input-file.tsx  model-card.tsx  model-cards.tsx  model-checkbox-form.tsx  model-select-card.tsx  overall-stats-table.tsx  question-table.tsx  questions-accordions.tsx
frontend/components/tutorial/: connect-supabase-steps.tsx  sign-up-user-steps.tsx  tutorial-step.tsx
frontend/hooks/: index.ts
frontend/ratemyeval/.next/: trace
